--- a/Adeline_Makokha_Term_Project.ipynb
+++ b/Adeline_Makokha_Term_Project.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "The churn data used in this analysis is sourced from a fictional telecommunications company that provides phone and internet services to 7,043 customers in California. This dataset includes details about customer demographics, location, services, and current status.\n",
     "\n",
-    "For more information, please refer to the dataset available at: [Maven Analytics Telecom Dataset](https://app.mavenanalytics.io/datasets?search=telecom)\n",
+    "For more information, please refer to the dataset available at: [Telecom Dataset](https://app.mavenanalytics.io/datasets?search=telecom)\n",
     "\n",
     "\n",
     "#### Period Collected\n",
