--- a/Adeline_Makokha_Term_Project.ipynb
+++ b/Adeline_Makokha_Term_Project.ipynb
@@ -875,7 +875,7 @@
     "    ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha='right', fontsize=14)\n",
     "    plt.show()\n",
     "\n",
-    "# Example: Call the function with the 'churn' DataFrame\n",
+    "# Call the function with the 'churn' DataFrame\n",
     "fig_countplot(churn, 'Age', sort=True)\n"
    ]
   },
@@ -1090,26 +1090,6 @@
     "\n",
     "- **Plan Optimization:**\n",
     "  - Understanding the reasons behind churn at different charge levels can help in optimizing the pricing and features of various plans to reduce churn rates.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "id": "5f38f9c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print average\n",
-    "def printAvg(churn, col):\n",
-    "    print(\"Average: \" + str(churn[col].mean()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d0c7bed",
-   "metadata": {},
-   "source": [
-    "\n"
    ]
   },
   {
@@ -1439,6 +1419,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f422210",
+   "metadata": {},
+   "source": [
+    "Customer Status has high correlation with Churn category, churn reason,  Contract, Tenure in Months and Total Revenue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14f07406",
    "metadata": {},
    "source": [
@@ -1512,6 +1500,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "907a3679",
+   "metadata": {},
+   "source": [
+    "From Feature importance Customer Status has high correlation with Churn category, churn reason,  Contract, Tenure in Months and Total Revenue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "beda2c75-d301-48bf-bb45-68f09a86c84f",
    "metadata": {},
    "source": [
@@ -1563,8 +1559,8 @@
    "metadata": {},
    "source": [
     "2. **Remove Missing Values:**\n",
-    "   - For this analysis, let's focus on imputing the missing values in `Churn Category`,`Churn Reason`.\n",
-    "   - The two columns have more than 50 % missing values."
+    "   - For this analysis, imputted the missing values in other columns except `Churn Category`and `Churn Reason` .\n",
+    "   - The two columns `Churn Category`and`Churn Reason` have more than 50 % missing values, I dropped the columns."
    ]
   },
   {
@@ -1881,6 +1877,7 @@
     }
    ],
    "source": [
+    "#showing the categorical columns\n",
     "categorical_columns = churn_df.select_dtypes(include=['object', 'category']).columns\n",
     "categorical_columns"
    ]
@@ -1940,6 +1937,7 @@
     }
    ],
    "source": [
+    "#printing the caterogical information\n",
     "categorical_info = {col: churn[col].nunique() for col in categorical_columns}\n",
     "\n",
     "print(categorical_info)"
@@ -1952,6 +1950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dropping the customer status which is our y axis\n",
     "churn_df = churn_df.drop(['Customer Status'], axis = 1)\n",
     "cat_columns = churn_df.select_dtypes(include=['object', 'category']).columns\n",
     "cats = cat_columns.values"
@@ -1980,6 +1979,7 @@
     }
    ],
    "source": [
+    "#the x axis output\n",
     "cats"
    ]
   },
@@ -2407,6 +2407,7 @@
     }
    ],
    "source": [
+    "#first few rows for the x- axis\n",
     "encoded_df"
    ]
   },
@@ -2417,6 +2418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# label encoder for the y - variable which is customer status\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
@@ -2432,6 +2434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding the cutomer status to our cleaned dataset\n",
     "df1 = churn_df.drop(cats, axis = 1)\n",
     "final_df = pd.concat([custome_stat, df1], axis = 1)\n",
     "final_df = pd.concat([final_df, encoded_df], axis = 1)"
@@ -2858,6 +2861,7 @@
     }
    ],
    "source": [
+    "#viewing the first rows of our final data\n",
     "final_df"
    ]
   },
@@ -2989,6 +2993,7 @@
     }
    ],
    "source": [
+    "# Inspect the first few rows of the NumPy array\n",
     "y = np.asarray(final_df1['Customer Status'])\n",
     "y [0:5]"
    ]
@@ -3089,8 +3094,9 @@
     }
    ],
    "source": [
+    "#the min-max normalization (0 to 1)\n",
     "scaler = MinMaxScaler()\n",
-    "X = scaler.fit_transform(X) #this give -1 to 1 #OR the min-max normalization (0 to 1)\n",
+    "X = scaler.fit_transform(X) \n",
     "X[0:5]"
    ]
   },
@@ -3120,6 +3126,7 @@
     }
    ],
    "source": [
+    "#spliting the dataset into train(80) and test (20)\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=50)\n",
     "print ('Train set:', X_train.shape,  y_train.shape)\n",
@@ -3603,6 +3610,7 @@
     }
    ],
    "source": [
+    "#predicting the yhat\n",
     "yhat = LR.predict(X_test)\n",
     "yhat\n"
    ]
@@ -3640,6 +3648,7 @@
     }
    ],
    "source": [
+    "#predict proba\n",
     "yhat_prob = LR.predict_proba(X_test)\n",
     "yhat_prob"
    ]
@@ -3688,6 +3697,7 @@
     }
    ],
    "source": [
+    "#logistic regression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
@@ -3877,19 +3887,7 @@
     "- **Stayed (False):** Customers who did not churn.\n",
     "- **Churned (True):** Customers who churned.\n",
     "\n",
-    "### Model Evaluation\n",
-    "\n",
-    "**Class 2 (Churn) Prediction Strength:**\n",
-    "\n",
-    "- The model performs well at predicting Churn, with 841 correct predictions (True Positives) out of the total 931 customers who actually churned. This suggests the model is strong at identifying customers who are likely to churn.\n",
-    "\n",
-    "**Class 1 (Joined) Prediction Weakness:**\n",
-    "\n",
-    "- The model has moderate performance for predicting customers who joined. It correctly predicts 55 out of 98 total Joined customers, but there are still notable misclassifications with 32 predicted as Non-Churn and 11 as Churn. This indicates some difficulty in distinguishing Joined customers.\n",
-    "\n",
-    "**Class 0 (Non-Churn) Misclassifications:**\n",
-    "\n",
-    "- There are significant misclassifications for Non-Churn customers. The model correctly predicts 271 Non-Churn customers, but it also incorrectly predicts many as Churn (90) or Joined (19). This suggests the model struggles to distinguish between Non-Churn and Churn in some cases.\n"
+    "\n"
    ]
   },
   {
